--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-
+  <head>
+    <title>Let's get ready to rumble!</title>
+  </head>
   <body>
     Hello there, awesome person! 
   </body>
