--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Let's get ready to rumble!</title>
   </head>
   <body>
-    Hello there, awesome person! 
+    <h1>Hello there, awesome person!</h1>
   </body>
 </html>
