--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Let's get ready to rumble!</title>
   </head>
   <body>
-    <h1>Hello there, awesome person!</h1>
+<img src="https://avatars.githubusercontent.com/u/82386690?v=4">
+
   </body>
 </html>
