--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
   <head>
     <title>Let's get ready to rumble!</title>
   </head>
+  
   <body>
-<img src="https://avatars.githubusercontent.com/u/82386690?v=4">
+    <img src="https://avatars.githubusercontent.com/u/82386690?v=4">
+    
+    <ol>
+      <li>This</li>
+      <li>Is an</li>
+      <li>Ordered list</li>
+    </ol>
+    
+  <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+  </ul>
 
   </body>
 </html>
